# partitionedhashjoin

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
benchmarks/: CMakeLists.txt  main.cpp
benchmarks/IHasher/: CityHasher.hpp  MurmurHasher.hpp  XXHasher.hpp
benchmarks/NoPartitioning/: HashTableBenchmark.hpp
results/1.05/: partitions_1.txt  partitions_1024.txt  partitions_128.txt  partitions_2048.txt  partitions_256.txt  partitions_32.txt  partitions_4096.txt  partitions_512.txt  partitions_64.txt  partitions_8192.txt  skew_1.05.partitions_1.txt  skew_1.05.partitions_1024.txt  skew_1.05.partitions_128.txt  skew_1.05.partitions_2048.txt  skew_1.05.partitions_256.txt  skew_1.05.partitions_32.txt  skew_1.05.partitions_4096.txt  skew_1.05.partitions_512.txt  skew_1.05.partitions_64.txt  skew_1.05.partitions_8192.txt
results/1.25/: partitions_1.txt  partitions_1024.txt  partitions_128.txt  partitions_2048.txt  partitions_256.txt  partitions_32.txt  partitions_4096.txt  partitions_512.txt  partitions_64.txt  partitions_8192.txt  skew_1.25.partitions_1.txt  skew_1.25.partitions_1024.txt  skew_1.25.partitions_128.txt  skew_1.25.partitions_2048.txt  skew_1.25.partitions_256.txt  skew_1.25.partitions_32.txt  skew_1.25.partitions_4096.txt  skew_1.25.partitions_512.txt  skew_1.25.partitions_64.txt  skew_1.25.partitions_8192.txt
scripts/: figure.plot  generate.sh
src/: Arguments.hpp  CMakeLists.txt  main.cpp
src/Common/: Allocator.cpp  Configuration.cpp  Configuration.hpp  IHasher.hpp  IThreadPool.cpp  IThreadPool.hpp  Logger.cpp  Logger.h  Logger.hpp  ModuloHasher.hpp  MurmurHash.cpp  MurmurHash.hpp  MurmurHasher.hpp  Random.cpp  Random.hpp  Results.hpp  Table.cpp  Table.hpp  TestResults.hpp  ThreadPool.cpp  ThreadPool.hpp  XXHasher.hpp
src/DataGenerator/: Sequential.cpp  Sequential.hpp  Zipf.cpp  Zipf.hpp
src/HashTables/: LinearProbing.cpp  LinearProbing.hpp  SeparateChaining.cpp  SeparateChaining.hpp
src/NoPartitioning/: Configuration.hpp  HashJoin.cpp  HashJoin.hpp  HashTable.hpp
src/NoPartitioningHashJoin/: HashTable.hpp
src/RadixCluster/: Configuration.hpp  HashJoin.cpp  HashJoin.hpp
tests/: CMakeLists.txt  main.cpp
tests/DataGenerator/: ZipfTest.hpp
tests/NoPartitioningHashJoin/: HashTableTest.hpp
